--- a/Roadmap_HTML2.html
+++ b/Roadmap_HTML2.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> Roadmap </title>
     <link rel="stylesheet" href="Roadmap_CSS1.css">
-</head>
+    <link rel="icon" type="image/x-icon" href="WFH.jpg">
+  </head>
 <body>
 
 <h1>This is a heading</h1>
@@ -33,8 +35,216 @@ style="border: 3px; width: 25%; height: 3%;">
     <img src="D.gif" alt="HTML tutorial" style="width: 100px;height: 100px;">
   </a>
 
-  <p><img src="load.gif" alt="load" style="float:right";width:42px;height:42px;">
-    The image will float to the right of the text.</p>
+  <p><img src="load.gif" alt="load" style="float:right";width:42px;height:42px;> </p>
+
+    <img src="maps.jpg" alt="maps" usemap="#maps">
+
+<map name="maps">
+  <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
+  <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
+  <area shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm">
+</map>
+
+<picture>
+  <source media="(min-width: 650px)" srcset="Work.jpeg">
+  <source media="(min-width: 465px)" srcset="From home.jpeg">
+  <img src="WFH.jpg">
+</picture>
+
+<table style="100%">
+  <tr>
+    <th style="width: 70%;">Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td style="height: 200px;">Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
+
+<table>
+  <caption> Age Ratio </caption>
+  <tr>
+    <th>Firstname</th>
+    <td>Jill</td>
+    <td>Eve</td>
+  </tr>
+  <tr>
+    <th>Lastname</th>
+    <td>Smith</td>
+    <td>Jackson</td>
+  </tr>
+  <tr>
+    <th>Age</th>
+    <td>94</td>
+    <td>50</td>
+  </tr>
+</table>
+
+<table>
+  <colgroup>
+    <col span="2" style="background-color: #D6EEEE">
+    <col span="3" style="background-color: pink">
+  </colgroup>
+  <tr>
+    <th>MON</th>
+    <td>1</td>
+    <td>8</td>
+    <td>15</td>
+    <td>22</td>
+  </tr>
+  <tr>
+    <th>TUE</th>
+    <td>2</td>
+    <td>9</td>
+    <td>16</td>
+    <td>23</td>
+  </tr>
+  <tr>
+    <th>WED</th>
+    <td>3</td>
+    <td>10</td>
+    <td>17</td>
+    <td>24</td>
+  </tr>
+  <tr>
+    <th>THU</th>
+    <td>4</td>
+    <td>11</td>
+    <td>18</td>
+    <td>25</td>
+  </tr>
+  <tr>
+    <th>FRI</th>
+    <td>5</td>
+    <td>12</td>
+    <td>19</td>
+    <td>26</td>
+  </tr>
+  <tr>
+    <th>SAT</th>
+    <td>6</td>
+    <td>13</td>
+    <td>20</td>
+    <td>27</td>
+  </tr>
+  <tr>
+    <th>SUN</th>
+    <td>7</td>
+    <td>14</td>
+    <td>21</td>
+    <td>28</td>
+  </tr>
+</table>
+
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+
+<ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<dl>
+  <dt>Coffee</dt>
+  <dd>- black hot drink</dd>
+  <dt>Milk</dt>
+  <dd>- white cold drink</dd>
+</dl>
+
+<ul style="list-style-type: disc;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+
+<ul style="list-style-type: circle;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+
+<ul style="list-style-type: square;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+
+<ul style="list-style-type: none;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+
+<ul>
+  <li>Coffee</li>
+  <li>Tea
+    <ul>
+      <li>Black tea</li>
+      <li>Green tea</li>
+    </ul>
+  </li>
+  <li>Milk</li>
+</ul>
+
+<ol type="1">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<ol type="A">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<ol type="a">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<ol type="I">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<ol type="i">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<ol start="50">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<ol>
+  <li>Coffee</li>
+  <li>Tea
+    <ol>
+      <li>Black tea</li>
+      <li>Green tea</li>
+    </ol>
+  </li>
+  <li>Milk</li>
+</ol>
 
 </body>
+
 </html>
